# sweep-bot

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
hooks/: swiip_on_ticket.yaml
src/: api.py  events.py
src/chains/: on_comment.py  on_ticket.py  on_ticket_models.py  on_ticket_prompts.py
src/common/: code_utils.py  models.py  sweep_bot.py
src/core/: models.py  prompts.py  sweep_bot.py
src/handlers/: on_comment.py  on_ticket.py
src/utils/: __init__.py  code_utils.py  github_utils.py  jina_utils.py  tiktoken_utils.py
tests/: test_jina_query.py  test_new_ticket.py
